# Autokindler

./: .gitignore  AGENT.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.planning/: PROJECT.md  STATE.md
.planning/phases/01-backend-foundation/: 01-02-SUMMARY.md
.planning/phases/02-delivery-engine/: 02-02-SUMMARY.md
apps/api/: .env.example  package.json  tsconfig.json
apps/api/src/: index.ts
apps/api/src/lib/: env.ts  jwt.ts  sqs.ts
apps/api/src/middleware/: auth.ts  rate-limit.ts
apps/api/src/routes/: auth.ts  deliveries.ts  users.ts
apps/workers/: .env.example  Dockerfile  pyproject.toml
apps/workers/src/: config.py  db.py  main.py
apps/workers/src/cache/: file_cache.py
apps/workers/src/email/: interface.py  ses_adapter.py
apps/workers/src/pipeline/: converter.py  downloader.py  orchestrator.py  resolver.py  size_guard.py
apps/workers/src/queue/: interface.py  sqs_adapter.py
docs/: api-spec.md  architecture.md  data-model.md  development.md  openapi.yaml  operations.md  overview.md  product-spec.md  roadmap.md  security.md
infra/: docker-compose.yml
infra/localstack/: init-sqs.sh
